components/header/header.module.css
.container {
    width: 1536px;
    margin-left: auto;
    margin-right: auto;
}

.burger {
  filter: var(--black-img-filter);
}

.menu {
  box-sizing: border-box;
  display: grid;
  row-gap: 0;
  grid-template-columns: 1fr 1fr;
  background-color: var(--header-bg-colour);
}

.menuIcon {
  width: auto;
  justify-self: center;
  align-self: center;
  transition: all .50s ease;
  display: none;
}

.nav {
  box-sizing: border-box;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  justify-items: center;
}
  
  @media (min-width: 1536px) {
    .container {
      width: 1536px;
      /* transition: .2s; */

    }

    .menu {
      gap: 2rem;
      align-items: center; 
      padding: 5rem;
      padding-bottom: 0;
      /* transition: .2s; */

    }

    .nav {
      gap: 1rem;
      height: 3rem;
      /* transition: .2s; */
      font-size: 2rem;

    }

    .left {
      font-size: 3rem;
  }
  .burger {
    height: 0;

  }
  }

  /* 2xl */
  @media (max-width: 1536px) {
    .container {
      max-width: 1280px;
    }

    .menu {
        gap: 2rem;
        align-items: center; 
        padding: 5rem;
        padding-bottom: 0;

        /* transition: .2s; */

    }

    .burger {
      height: 0;
  
    }

    .nav {
      gap: 1rem;
      height: 3rem;
      /* transition: .2s; */
      font-size: 2rem;


    }

    .left {
      font-size: 3rem;
  }
  }
  
  /* xl */
  @media (max-width: 1280px) {
    .container {
      max-width: 1024px;
    }

    .nav {
      gap: 0.5rem;
      /* transition: .2s; */
    }

    .left {
      font-size: 3rem;
  }

  }
  
  /* lg */
  @media (max-width: 1024px) {
    .container {
      max-width: 768px;
    }

    .left {
      font-size: 2rem;
    }

    .nav {
      font-size: 1.5rem;
    }
  }
  
  /* md */
  @media (max-width: 768px) {
    .container {
      max-width: 640px;
    }

    .menuIcon {
      display:block;
    }

    .menu {
      padding: 4rem;
      padding-bottom: 2rem;

    }

    .left {
      font-size: 2rem;
    }
    .burger {
      height: 2rem;

    }
    
    .nav {
      position:absolute;
      top: -1000px;
      margin:auto;
      justify-self: center;
      width: 300px;
      height: auto;
      background-color: var(--header-bg-colour);
      display:flex;
      flex-direction: column;
      justify-content: flex-start;
      border-radius: 10px;
      border: 1px solid var(--main-text-colour);
      /* transition: all .50s ease; */
      padding: 1rem;
      font-size: 1.5rem;
    }

    
  }
  
  /* sm */
  @media (max-width: 640px) {
    .container {
      max-width: 475px;
    }
    .left {
      font-size: 1.4rem;
    }
    .menu {
      padding: 3rem;
      
    }

    .nav {
      width: 200px;
    }
  }
  
  /* xs */
  @media (max-width: 475px) {
    .container {
      width: 100%;
    }
    .menu {
      padding: 2rem;
    }
    .left {
      font-size: 1rem;
    }
  }

.nav li {
    display: inline;
    /* transition: all .50s ease; */
}

.nav li:hover{
    text-decoration: underline;
}

.left {
    justify-self: flex-start;
    font-weight: 900;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.burger {
  
  width: 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
  justify-self: flex-end;
}

